[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teslastocks"
version="0.1"
description = 'Time series Analysis of Tesla Stock Data'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Dhanya-Zac", email = "dhanya.zacharias@tu-dortmund.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pandas","numpy", "matplotlib","seaborn"]

[project.urls]
Documentation = "https://github.com/Dhanya-Zac/teslastocks#readme"
Issues = "https://github.com/Dhanya-Zac/teslastocks/issues"
Source = "https://github.com/Dhanya-Zac/teslastocks"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/teslastocks tests}"

[tool.coverage.run]
source_pkgs = ["teslastocks", "tests"]
branch = true
parallel = true
omit = [
  "src/teslastocks/__about__.py",
]

[tool.coverage.paths]
teslastocks = ["src/teslastocks", "*/teslastocks/src/teslastocks"]
tests = ["tests", "*/teslastocks/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
